--- a/README.org
+++ b/README.org
@@ -36,6 +36,10 @@ its content.
 
 ** June 2022
 
+*** 13-Jun-22
++ [[https://rjlipton.wpcomstaging.com/2022/06/13/sorting-and-proving/][Sorting and proving]]. ~ R.J. Lipton & K.W. Regan. #Algorithms
++ [[https://www.michaelpj.com/blog/2022/06/12/lenses-for-tree-traversals-redux.html][Lenses for Tree Traversals Redux]]. ~ Michael Peyton Jones (@mpeytonjones). #Haskell #FunctionalProgramming
+  
 *** 12-Jun-22
 + [[https://www.ps.uni-saarland.de/Publications/documents/HostertEtAl_2022_Undecidability.pdf][Undecidability of dyadic first-order logic in Coq]]. ~ Johannes Hostert, Andrej Dudenhefner, Dominik Kirst. #ITP #Coq #Logic
 + [[https://www.ps.uni-saarland.de/~kirst/downloads/TYPES_2022_paper_16.pdf][Strong, synthetic, and computational proofs of Gödel’s first incompleteness theorem]]. ~ Benjamin Peters, Dominik Kirst. #ITP #Coq #Logic #Math
