--- a/README.org
+++ b/README.org
@@ -36,6 +36,10 @@ its content.
 
 ** June 2022
 
+*** 14-Jun-22
++ [[https://mmhaskell.com/blog/2022/6/13/exception-type-details][Exception type details]]. ~ James Bowen (@james_OWA). #Haskell #FunctionalProgramming
++ [[https://serras.github.io/zurihac-workshop][Haskell (The Legend of DSLs)]]. ~ Alejandro Serrano (@trupill). #Haskell #FunctionalProgramming
+
 *** 13-Jun-22
 + [[https://rjlipton.wpcomstaging.com/2022/06/13/sorting-and-proving/][Sorting and proving]]. ~ R.J. Lipton & K.W. Regan. #Algorithms
 + [[https://www.michaelpj.com/blog/2022/06/12/lenses-for-tree-traversals-redux.html][Lenses for Tree Traversals Redux]]. ~ Michael Peyton Jones (@mpeytonjones). #Haskell #FunctionalProgramming
